// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AvatarFavicon should match the snapshot 1`] = `
<View
  style={
    {
      "backgroundColor": "#ffffff",
      "borderRadius": 16,
      "height": 32,
      "overflow": "hidden",
      "width": 32,
    }
  }
>
  <Image
    onError={[Function]}
    resizeMode="contain"
    source={
      {
        "uri": "https://uniswap.org/favicon.ico",
      }
    }
    style={
      {
        "flex": 1,
        "height": undefined,
        "width": undefined,
      }
    }
    testID="favicon-avatar-image"
  />
</View>
`;

exports[`AvatarFavicon should render SVG 1`] = `
<View
  style={
    {
      "backgroundColor": "#ffffff",
      "borderRadius": 16,
      "height": 32,
      "overflow": "hidden",
      "width": 32,
    }
  }
>
  <Image
    onError={[Function]}
    resizeMode="contain"
    source={
      {
        "uri": "https://metamask.github.io/test-dapp/metamask-fox.svg",
      }
    }
    style={
      {
        "flex": 1,
        "height": undefined,
        "width": undefined,
      }
    }
    testID="favicon-avatar-image"
  />
</View>
`;

exports[`AvatarFavicon should render fallback when svg has error 1`] = `
<AvatarBase
  size="32"
  style={{}}
>
  <Image
    onError={[Function]}
    resizeMode="contain"
    source={
      {
        "uri": "https://metamask.github.io/test-dapp/metamask-fox.svg",
      }
    }
    style={
      {
        "flex": 1,
        "height": undefined,
        "width": undefined,
      }
    }
    testID="favicon-avatar-image"
  />
</AvatarBase>
`;
